tests/ui/coroutine/gen_block_is_no_future.rs
//compile-flags: --edition 2024 -Zunstable-options
#![feature(coroutines)]

fn foo() -> impl std::future::Future { //~ ERROR is not a future
    gen { yield 42 }
}

fn main() {}
